# atlas-terminal

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ai_mode.md  backtesting_agent.md
src/atlas/: __main__.py  cli.py  environment.py  terminal.py
src/atlas/ai/: __init__.py  chat.py  client.py  tools.py
src/atlas/backtesting/: __init__.py  manager.py
src/atlas/brokers/: __init__.py  alpaca.py  base.py  models.py
src/atlas/mcp/: __init__.py  docker.py
tests/: test_ai_tools.py  test_backtesting_manager.py  test_cli.py  test_environment.py  test_fetch_url_tool.py  test_option_orders.py  test_option_symbol.py  test_search_tool.py
