[project]
name = "atlas"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    # Core trading/data SDK. Install with: pip install alpaca-py
    "alpaca-py>=0.30.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "termcolor>=2.4.0",
]

[tool.poetry]
packages = [{include = "atlas", from = "src"}]

[project.scripts]
# Exposes a terminal command `atlas` that runs our CLI.
atlas = "atlas.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
